updating api schema and new controllers
