# northwind-modulith/src/main/resources/rest/api.yaml
@@ -3,15 +3,20 @@ info:
   title: Northwind Modulith API
   description: Northwind Modulith API
   version: 1.0.0
-# servers:
-#   - url: 'http://localhost:8080/api/v1'
-#     description: Local Server
+servers:
+  - url: 'http://localhost:8080'
+    description: Local Server
 
 tags:
   - name: Product
     description: Performs CRUD operations for products
-  - name: Category
-    description: Perforns CRUD operations for categories
+  - name: Order
+    description: Performs CRUD operations for orders
+  - name: Supplier
+    description: Performs CRUD operations for suppliers
+  - name: Customer
+    description: Performs CRUD operations for customers
+
 paths:
   /products:
     get:
@@ -27,7 +32,7 @@ paths:
           required: false
           schema:
             type: string
-        - name: searchName
+        - name: searchOrderName
           in: query
           description: Filter products by their titles or partial match
           required: false
@@ -106,96 +111,206 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Product'
-    post:
-      summary: Add a product to the database
-      description: Add a product to the database
-      operationId: addProduct
-      tags:
-        - Product
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Product'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/Product'
-      responses:
-        '201':
-          description: Product added
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Product' #todo change to surigate key
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Product'
-  /categories:
-    get:
-      summary: Returns a list of categories
-      description: Returns a list of categories
-      operationId: getCategories
-      tags:
-        - Category
-      parameters:
-        - name: categoryId
-          in: query
-          description: Filter products by categoryId
-          required: false
-          schema:
-            type: string
-        - name: categoryName
-          in: query
-          description: Filter products by categoryName
-          required: false
-          schema:
-            type: string
+    # post:
+    #   summary: Add a product to the database
+    #   description: Add a product to the database
+    #   operationId: addProduct
+    #   tags:
+    #     - Product
+    #   requestBody:
+    #     required: true
+    #     content:
+    #       application/json:
+    #         schema:
+    #           $ref: '#/components/schemas/Product'
+    #       application/xml:
+    #         schema:
+    #           $ref: '#/components/schemas/Product'
+    #   responses:
+    #     '201':
+    #       description: Product added
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: '#/components/schemas/Product' #todo change to surigate key
+    #         application/xml:
+    #           schema:
+    #             $ref: '#/components/schemas/Product'
 
-        - name: limit #todo externalise this part
+  /orders:
+    get:
+      summary: Returns a list of orders
+      description: Returns a list of orders
+      operationId: getOrders
+      tags:
+        - Order
+      parameters:
+        - name: orderKey
           in: query
-          description: Page
-          required: false
-          schema:
-            type: integer
-            format: int32
-            default: 12
-        - name: sort
-          in: query
-          description: Sort by this field
-          required: false
-          schema:
-            type: string
-            enum: [name, price, supplier, category]
-            default: name
-        - name: direction
-          in: query
-          description: Sorting direction
+          description: Key for the order
           required: false
           schema:
             type: string
-            enum: [asc, desc]
-            default: asc
+        - name: customerKey
+          in: query
+          description: Filter orders by customer
+          required: false
+          schema:
+            type: string
       responses:
         '200':
-          description:
-            List of matching category results
+          description: List of matching order results
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Category'
+                  $ref: '#/components/schemas/Order'
             application/xml:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Category'
+                  $ref: '#/components/schemas/Order'
+
+  /suppliers:
+    get:
+      summary: Returns a list of suppliers
+      description: Returns a list of suppliers
+      operationId: getSuppliers
+      tags:
+        - Supplier
+      parameters:
+        - name: customerKey
+          in: query
+          description: Key for the customer
+          required: false
+          schema:
+            type: string
+        - name: searchCustomerName
+          in: query
+          description: Search for a customer by name
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: List of matching customer results
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Customer'
+            application/xml:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Customer'
+
+
+  /customer:
+    get:
+      summary: Returns a list of customers
+      description: Returns a list of customers
+      operationId: getCustomers
+      tags:
+        - Customer
+      parameters:
+        - name: supplierKey
+          in: query
+          description: Key for the supplier
+          required: false
+          schema:
+            type: string
+        - name: searchSupplierName
+          in: query
+          description: Search for a supplier by name
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: List of matching supplier results
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Supplier'
+            application/xml:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Supplier'
+
+
+
+  # /categories:
+  #   get:
+  #     summary: Returns a list of categories
+  #     description: Returns a list of categories
+  #     operationId: getCategories
+  #     tags:
+  #       - Category
+  #     parameters:
+  #       - name: categoryId
+  #         in: query
+  #         description: Filter products by categoryId
+  #         required: false
+  #         schema:
+  #           type: string
+  #       - name: categoryName
+  #         in: query
+  #         description: Filter products by categoryName
+  #         required: false
+  #         schema:
+  #           type: string
+
+  #       - name: limit #todo externalise this part
+  #         in: query
+  #         description: Page
+  #         required: false
+  #         schema:
+  #           type: integer
+  #           format: int32
+  #           default: 12
+  #       - name: sort
+  #         in: query
+  #         description: Sort by this field
+  #         required: false
+  #         schema:
+  #           type: string
+  #           enum: [name, price, supplier, category]
+  #           default: name
+  #       - name: direction
+  #         in: query
+  #         description: Sorting direction
+  #         required: false
+  #         schema:
+  #           type: string
+  #           enum: [asc, desc]
+  #           default: asc
+  #     responses:
+  #       '200':
+  #         description:
+  #           List of matching category results
+  #         content:
+  #           application/json:
+  #             schema:
+  #               type: array
+  #               items:
+  #                 $ref: '#/components/schemas/Category'
+  #           application/xml:
+  #             schema:
+  #               type: array
+  #               items:
+  #                 $ref: '#/components/schemas/Category'
 
 
 
 components:
   schemas:
+
     Product:
       type: object
       properties:
@@ -223,6 +338,88 @@ components:
           type: number
           format: float
           example: '10'
+
+    Order:
+      type: object
+      properties:
+        orderKey:
+          type: string
+          example: 'ORD-001'
+        orderDate:
+          type: string
+          format: date-time
+        shipmentId:
+          type: string
+        orderDetails:
+          type: array
+          items:
+            $ref: '#/components/schemas/OrderDetail'
+
+    OrderDetail:
+      type: object
+      properties:
+        product:
+          $ref: '#/components/schemas/Product'
+        quantity:
+          type: integer
+
+    Supplier:
+      type: object
+      properties:
+        supplierKey:
+          type: string
+          example: 'SUP-001'
+        supplierName:
+          type: string
+          example: 'Sporting Supplier store'
+        addressDetails:
+          $ref: '#/components/schemas/AddressDetails'
+        #   type: string
+        #   example: '1 Queen Street'
+        # city:
+        #   type: string
+        #   example: 'Auckland'
+        # postalCode:
+        #   type: string
+        #   example: '1060'
+        # country:
+        #   type: string
+        #   example: 'New Zealand'
+        phone:
+          type: string
+          example: '0912345678'
+
+    Customer:
+      # Can I reuse an address as its own type?
+      type: object
+      properties:
+        customerKey:
+          type: string
+          example: 'CUST-001'
+        customerName:
+          type: string
+          example: 'My mowing business'
+        addressDetails:
+          $ref: '#/components/schemas/AddressDetails'
+
+    AddressDetails:
+      type: object
+      properties:
+        address:
+          type: string
+          example: '1 Queen Street'
+        city:
+          type: string
+          example: 'Auckland'
+        postalCode:
+          type: string
+          example: '1060'
+        country:
+          type: string
+          example: 'New Zealand'
+
+
+
     Category:
       type: object
       properties:
